Update readmes with instructions for running JFR with JDK 11+